<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Samoloty AR</string>
    <string name="app_description">Samoloty AR</string>

    <string name="version_vuforia">Vuforia Engine v</string>
    <string name="version_android">Android API level</string>

    <string name="instruct_relocalize">Point camera to previous position to restore tracking</string>

    <string name="button_OK">OK</string>

    <string name="INIT_ERROR">Error</string>
    <string name="INIT_ERROR_DEVICE_NOT_SUPPORTED">Failed to initialize Vuforia Engine. This device is not supported.</string>
    <string name="INIT_ERROR_NO_CAMERA_ACCESS">Failed to initialize Vuforia Engine. Camera not accessible</string>
    <string name="INIT_LICENSE_ERROR_MISSING_KEY">Vuforia Engine App key is missing. Please get a valid key, by logging into your account at developer.vuforia.com and creating a new project.</string>
    <string name="INIT_LICENSE_ERROR_INVALID_KEY">Invalid Key used. Please make sure you are using a valid Vuforia Engine App Key.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_TRANSIENT">Unable to contact server. Please try again later.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_PERMANENT">No network available. Please make sure you are connected to the Internet.</string>
    <string name="INIT_LICENSE_ERROR_CANCELED_KEY">This app license key has been canceled and may no longer be used. Please get a new license key.</string>
    <string name="INIT_LICENSE_ERROR_PRODUCT_TYPE_MISMATCH">Vuforia Engine App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_UNKNOWN_ERROR">Failed to initialize Vuforia Engine.</string>

    <string name="menu_back">Vuforia Engine Samples</string>
    <string name="menu_device_tracker">Device Tracker</string>
    <string name="menu_flash">Flash</string>
    <string name="menu_flash_error_on">Unable to turn on flash</string>
    <string name="menu_flash_error_off">Unable to turn off flash</string>
    <string name="menu_contAutofocus">Autofocus</string>
    <string name="menu_contAutofocus_error_on">Unable to activate Continuous Auto-Focus</string>
    <string name="menu_contAutofocus_error_off">Unable to deactivate Continuous Auto-Focus</string>

    <string name="menu_datasets">DATASETS</string>
    <string name="menu_versions">VERSIONS</string>
    <string name="menu_camera">CAMERA</string>
    <string name="mode_free">TRYB DOWOLNY</string>
    <string name="mode_random">TRYB LOSOWY</string>
    <string name="game_rules">ZASADY GRY</string>
    <string name="exit">WYJŚCIE</string>
    <string name="loading">Wczytywanie</string>
    <string name="game_rules_description">- przed rozpoczęciem rozgrywki przygotuj znaczniki\n- skieruj kamerę na
        znaczniki\n- ustaw samoloty według podanej kolejności
    </string>
    <string name="game_modes">Tryby gry</string>
    <string name="game_modes_description">Tryb dowolny - możesz wybrać sposób układania samolotów i w dowolnej chwili go
        zmienić\n\nTryb losowy - sposób układania samolotów jest wybierany losowo przed rozpoczęciem poziomu
    </string>
    <string name="ok">OK</string>
    <string name="change_sort_mode">ZMIEŃ TRYB UKŁADANIA</string>
    <string name="resume">POWRÓT</string>
    <string name="select_sort_mode">Wybierz sposób układania samolotów</string>
    <string name="keep_playing">GRAJ DALEJ</string>
    <string name="victory">ZWYCIĘSTWO!</string>

</resources>
