<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:text="@string/game_rules"
            style="@style/TutorialHeading"/>

    <TextView
            android:text="@string/game_rules_description"
            style="@style/TutorialText"/>

    <TextView
            android:text="@string/game_modes"
            android:layout_marginTop="15dp"
            style="@style/TutorialHeading"/>

    <TextView
            android:text="@string/game_modes_description"
            style="@style/TutorialText"/>

    <Button
            android:text="@string/ok"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_ok"
            style="@style/RoundedButton"/>

</LinearLayout>